# cloudwalk

./: .env.example  .gitignore  AGENTS.md  AI_GUARDRAILS.md  CLAUDE.md  GEMINI.md  INVARIANTS.md  README.md  RULES.md  SYSTEM_MAP.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.continue/rules/: rules.md
.github/: copilot-instructions.md
app/: anomaly.py  auth_codes.py  config.py  dashboard_focus.py  data_loader.py  decision.py  main.py  mock_team_receiver.py  models.py  notifier.py  security.py
database/: monitoring-test.md
database/report/: checkout_1_anomaly.csv  checkout_2_anomaly.csv
docker/: api-entrypoint.sh  api.Dockerfile  grafana.Dockerfile
docs/: monitoring-methodology.md
grafana/: dashboard.json  dashboard.template.json
grafana/provisioning/dashboards/: cloudwalk.yaml
grafana/provisioning/datasources/: cloudwalk.yaml
logs/playwright/: grafana-dashboard-debug.json
openspec/specs/checkout-anomaly-analysis/: spec.md
openspec/specs/containerized-submission-bootstrap/: spec.md
openspec/specs/decision-guidance/: spec.md
report/: presentation.md  technical_report.md
scripts/: check_grafana_dashboard_contract.py  check_grafana_dashboard_playwright.js  check_grafana_dashboard_playwright.sh  checkout_analysis.py  generate_checkout_charts.py  openspec.sh  reviewer_start.ps1  reviewer_start.sh  smoke_one_click.sh
sql/: checkout_1_anomaly.sql  checkout_2_anomaly.sql  transaction_auth_drilldown.sql  transaction_status_rates.sql
tests/: test_api.py  test_dashboard_focus.py
(+40 files in other folders)
